[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-toolkit-lexical-graph"
version = "3.4.0-SNAPSHOT"
description = "AWS GraphRAG Toolkit, lexical graph"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["src/requirements.txt"]}
