[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "graphrag-toolkit-lexical-graph"
version = "3.7.0"
description = "AWS GraphRAG Toolkit, lexical graph"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]
license = "Apache-2.0"

[tool.setuptools.dynamic]
dependencies = {file = ["src/requirements.txt"]}
