[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphrag_toolkit"]

[project]
name = "graphrag-toolkit-lexical-graph"
version = "3.10.1"
description = "AWS GraphRAG Toolkit, lexical graph"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]
license = "Apache-2.0"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["src/graphrag_toolkit/lexical_graph/requirements.txt"]
