[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-toolkit-lexical-graph-falkordb"
version = "1.0.0"
description = "FalkorDB support for the AWS GraphRAG Toolkit, lexical graph"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["src/requirements.txt"]}
