[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "graphrag-toolkit-lexical-graph-falkordb"
version = "1.0.0"
description = "FalkorDB support for the AWS GraphRAG Toolkit, lexical graph"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]
license = "Apache-2.0"

[tool.setuptools.dynamic]
dependencies = {file = ["src/requirements.txt"]}
