[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphrag_toolkit_contrib"]


[project]
name = "graphrag-toolkit-lexical-graph-falkordb"
version = "1.0.1"
description = "FalkorDB support for the AWS GraphRAG Toolkit, lexical graph"
requires-python = ">=3.10"
dynamic = ["dependencies"]
license = "Apache-2.0"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["src/graphrag_toolkit_contrib/lexical_graph/storage/graph/falkordb/requirements.txt"]
